# ppy-blog

./: .gitignore  README.md  main.py  myModule.py  requirements.txt  setup.cfg
src/: main.py
src/backend/: main.py
src/backend/models/: models.py
src/backend/schemas/: base_schemas.py  create_schemas.py  get_schemas.py  schemas.py  update_schemas.py
src/backend/services/: create.py  crud.py  delete.py  get.py  update.py
src/frontend/: front.py
src/frontend/static/: style.css
src/frontend/templates/: blog.html  index.html  login.html  operationResult.html  postsComments.html  register.html  user.html
src/frontend/templates/userPages/: blog.html  createBlog.html  createPost.html  index.html  postsComments.html  selfUser.html  user.html
src/models/: models.py
src/modelsPackage/: modelsModule.py
src/schemas/: schemas.py
src/schemasPackage/: schemasModule.py
src/services/: crud.py  service.py
