[metadata]
name = PPY_BLOG
version = 0.0.1
author = JAKUB_DANIIL
author_email = s24820@pjwstk.edu.pl
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FrozzLab/ppy-blog.git
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src